@@ -4,6 +4,7 @@
  * property of ActiveViam Limited. Any unauthorized use,
  * reproduction or transfer of this material is strictly prohibited
  */
+
 package com.activeviam.apps;
 
 import org.springframework.boot.SpringApplication;
@@ -13,21 +14,15 @@ import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import com.activeviam.apps.annotations.DatastoreActivePivotApplication;
 import com.activeviam.apps.annotations.DirectQueryActivePivotApplication;
 
-@DirectQueryActivePivotApplication
+@DatastoreActivePivotApplication
 @EnableWebMvc
-@Profile("snowflake")
-public class DirectQuerySpringBootApplication {
+@Profile("query")
+public class QueryCubeApplication {
 
     public static void main(String[] args) {
-        // Run with following JVM properties
-        //--add-opens=java.base/java.lang=ALL-UNNAMED
-        //--add-opens=java.base/java.nio=ALL-UNNAMED
-        //--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-        //--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-        // -Dactiveviam.directquery.spring.enableLegacyInitialization=false
-
-        System.setProperty("spring.profiles.default", "snowflake");
-        System.setProperty("server.port", "9092");
-        SpringApplication.run(DirectQuerySpringBootApplication.class, args);
+        System.setProperty("spring.profiles.default", "query");
+        System.setProperty("server.port", "9090");
+        SpringApplication.run(QueryCubeApplication.class, args);
     }
+
 }
